--- a/secciones/navbar/navbar.html
+++ b/secciones/navbar/navbar.html
@@ -40,9 +40,12 @@
                 </li>
                 <li> <a href="/secciones/nosotros/nosotros.html" target="_parent">Nosotros</a></li>
                 <li><a href="/secciones/contactanos/contactanos.html" target="_parent">Contáctanos</a></li>
-            </ul>
+            </ul>            
         </nav>  
-    </div>  
+        <div class="login" style="margin-left: 20px;">
+            <a href="/secciones/login/login.html"><img src="/assets/usuario.png" style="width: 25px; height: 25px;"> </a>
+           </div>
+    </div>      
     </header>
     </body>
 </html>
